--- a/package.json
+++ b/package.json
@@ -26,14 +26,16 @@
   },
   "homepage": "https://github.com/gschool/galvanize-bookshelf#readme",
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "bcrypt-as-promised": "^1.1.0",
-    "body-parser": "^1.15.2",
+    "body-parser": "^1.17.2",
     "boom": "^3.2.2",
     "cookie-parser": "^1.4.3",
-    "express": "^4.14.0",
+    "env": "0.0.2",
+    "express": "^4.15.3",
     "humps": "^1.1.0",
-    "jsonwebtoken": "^7.1.9",
-    "knex": "^0.11.7",
+    "jsonwebtoken": "^7.4.1",
+    "knex": "^0.11.10",
     "morgan": "^1.7.0",
     "pg": "^6.0.0"
   },
