--- a/package.json
+++ b/package.json
@@ -4,12 +4,11 @@
   "description": "Create a web application to manage your book collection",
   "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "heroku-postbuild": "knex migrate:latest",
     "knex": "knex",
     "lint": "eslint  --ignore-pattern public/js/vendor",
-    "nf": "nf start",
-    "start": "node server.js",
-    "test": "mocha"
+    "nf": "nf start"
   },
   "repository": {
     "type": "git",
